# bds-btb

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.json
.github/workflows/: cmake-multi-platform.yml
scripts/: logger.lua
src/: main.cpp  pch.cpp  pch.h
src/detail/: server.h
src/event/: event.cpp  event.h  manager.h
src/event/types/: ServerUpdate.h  servertick.h
src/logger/: logger.cpp  logger.h
src/lua/: scripting.cpp  scripting.h
src/minecraft/: server.h
src/minecraft/network/: protocol.cpp  protocol.h  socket_abstraction.cpp  socket_abstraction.h
src/minecraft/network/packets/: LoginPacket.h  PingPacket.h  PlayStatusPacket.h
